# franka_teleop

./: .gitignore  README.md
docker/: Dockerfile  build.bash  run.bash
docker/.config/: update_bashrc_ros_1
src/franka_art/: CMakeLists.txt  README.md  package.xml
src/franka_art/config/: compliance_params.yaml  controllers.yaml
src/franka_art/launch/: panda_gazebo_impedance.launch  panda_gazebo_impedanceV2.launch  panda_gazebo_impedance_real.launch  panda_gazebo_impedance_sim.launch  panda_gazebo_impedance_test.launch  servo.launch
src/franka_art/scripts/: afas.py  drawing_panel.py  gesture_recognizer.py  gesture_recognizer_test.py  hand_to_pose copy.py  hand_to_pose.py  hand_to_pose_alpha.py  hand_to_pose_beta.py  hand_to_pose_test.py  hand_to_twist.py  mouse_to_pose.py
src/franka_ros/franka_control/config/: default_controllers.yaml  franka_control_node.yaml
src/franka_ros/franka_example_controllers/config/: franka_example_controllers.yaml
src/franka_ros/franka_gazebo/config/: sim_controllers.yaml
src/franka_ros/franka_gazebo/launch/: panda_softbots.launch
src/panda_gazebo_models/: CMakeLists.txt  package.xml
src/panda_gazebo_models/models/blue_cube/: model.config  model.sdf
src/panda_gazebo_models/models/blue_cylinder_small/: model.config  model.sdf
src/panda_gazebo_models/models/cube_support/: model.config  model.sdf
src/panda_gazebo_models/models/green_cylinder_small/: model.config  model.sdf
src/panda_gazebo_models/models/red_cube/: model.config  model.sdf
src/panda_gazebo_models/models/red_cylinder_small/: model.config  model.sdf
src/panda_gazebo_models/models/table/: model.sdf
src/panda_gazebo_models/models/table_with_cross/: model.config  model.sdf
src/panda_moveit_config/config/: servo.yaml
src/script/: hand_to_pose_test.py  hand_to_pose_v0.py  hand_to_pose_v1.py
src/shared_autonomy/: CMakeLists.txt  README.md  package.xml
src/shared_autonomy/bags/: franka_data_2025-07-30-11-20-07.bag
src/shared_autonomy/config/: initial_pose.yaml  param_blending_function.yaml  servo.yaml
src/shared_autonomy/launch/: panda_gazebo_impedance.launch  panda_gazebo_impedance_real.launch  panda_servo.launch  panda_table_objects.launch  robot_autonomy.launch  servo.launch  shared_autonomy.launch  teleop_hand_tracking.launch
src/shared_autonomy/rviz/: robot.rviz
src/shared_autonomy/scripts/: gazebo_to_rviz.py  gripper_close.py  hand_to_pose.py  param_interface.py  plot_analysis.py  robot_autonomy.py  shared_autonomy.py
src/shared_autonomy/worlds/: franka_custom.world  panda_table_objects.world
