<?xml version="1.0"?>
<package format="2">
  <name>franka_art</name>
  <version>0.0.0</version>
  <description>The franka_art package</description>

  <maintainer email="tonappa@todo.todo">tonappa</maintainer>

  <license>TODO</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>


  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>moveit_servo</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Export -->
  <export>
  </export>

</package>
