<?xml version="1.0"?>
<package format="2">
  <name>franka_art</name>
  <version>0.0.0</version>
  <description>The franka_art package</description>

  <maintainer email="tonappa@todo.todo">tonappa</maintainer>
  <license>TODO</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_servo</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>


  <!-- Run-time dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>


  <!-- Export -->
  <export>
  </export>
</package>